--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bagde",
+  "name": "qq-badge",
   "version": "1.0.0",
   "description": "QQ unread notifications",
   "main": "index.js",
